--- a/prime_admin/templates/lms/cash_flow.html
+++ b/prime_admin/templates/lms/cash_flow.html
@@ -43,8 +43,17 @@
         }
     }
 
+    function clearForm(){
+        $(':input','#frm_deposit')
+            .not(':button, :submit, :reset, :hidden')
+            .val('')
+            .prop('checked', false)
+            .prop('selected', false);
+    }
+
     $(document).ready(function () {
         $("#li_cash_flow").addClass('mm-active');
+        $("#btn_deposit").prop("disabled", false);
 
         var subscribers_selected = [];
 
@@ -53,6 +62,20 @@
                 if (!/^(GET|HEAD|OPTIONS|TRACE)$/i.test(settings.type) && !this.crossDomain) {
                     xhr.setRequestHeader("X-CSRFToken", CSRF_TOKEN);
                 }
+            }
+        });
+
+        $.validator.setDefaults({
+            errorElement: 'span',
+            errorPlacement: function (error, element) {
+                error.addClass('invalid-feedback');
+                element.closest('.form-group').append(error);
+            },
+            highlight: function (element, errorClass, validClass) {
+                $(element).addClass('is-invalid');
+            },
+            unhighlight: function (element, errorClass, validClass) {
+                $(element).removeClass('is-invalid');
             }
         });
 
@@ -605,8 +628,65 @@
         });
 
 
-        // FILTERS
+        $("#frm_deposit").validate({
+            'rules': {
+                'from_what': {
+                    'required': true,
+                },
+                'bank_name': {
+                    'required': true,
+                },
+                'account_no': {
+                    'required': true,
+                },
+                'account_name': {
+                    'required': true,
+                },
+                'amount': {
+                    'required': true,
+                },
+                'remarks': {
+                    'required': true,
+                }
+            },
+            'submitHandler': function(form){
+                var xform = $(form);
 
+                swal({
+                    title: `Confirm`,
+                    text: "Double check your inputted data!",
+                    type: "warning",
+                    showCancelButton: true,
+                    confirmButtonClass: "btn-danger",
+                    confirmButtonText: "Confirm!",
+                    closeOnConfirm: false,
+                    showLoaderOnConfirm: true
+                }, function(){
+                    setTimeout(function () {
+                        $.ajax({
+                            type: xform.attr('method'),
+                            url: xform.attr('action'),
+                            data: xform.serialize(),
+                            success: function (response) {
+                                event.stopPropagation();
+                                dtblSalesStatement.ajax.reload();
+                                dtblfund1statement.ajax.reload();
+                                dtblfund2statement.ajax.reload();
+                                dtblprofitshistory.ajax.reload();
+                                clearForm();
+                                swal("Success!", response.message, "success");
+                            },
+                            error: function (data) {
+                                swal("Error Occured!", "Please refresh the page then try again!", "error");
+                            },
+                        });
+                    }, 500);
+                });
+            }
+        });
+
+
+        // FILTERS
         $('#filter_date_from').change(function () {
             dtblSalesStatement.ajax.reload();
         });
@@ -618,8 +698,7 @@
         $('#filter_transaction_type').change(function () {
             dtblSalesStatement.ajax.reload();
         });
-
-    });
+    }); // document.ready
 </script>
 {% endblock %}
 
