--- a/prime_admin/templates/lms/deposit_modal.html
+++ b/prime_admin/templates/lms/deposit_modal.html
@@ -59,7 +59,7 @@
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="amount" class="">Deposit
                                             Amount</label>
-                                        <input required id="amount" placeholder="Amount" step="1" type="number"
+                                        <input required id="amount" placeholder="Amount" step="any" type="number"
                                             name="amount" class="form-control">
                                     </div>
                                 </div>
