feat: employee benefits table

--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/business_expenses.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/business_expenses.html
@@ -106,9 +106,7 @@
                 <div class="tab-pane" id="tab-eg6-8" role="tabpanel">
                     <p>Coming soon...</p>
                 </div>
-                <div class="tab-pane" id="tab-eg6-9" role="tabpanel">
-                    <p>Coming soon...</p>
-                </div>
+                {% include 'lms/fund_wallet/components/business_expenses/components/employee_benefits.html' %}
                 <div class="tab-pane" id="tab-eg6-10" role="tabpanel">
                     <p>Coming soon...</p>
                 </div>
