--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -9,8 +9,8 @@ id="testimonies">
         </div>
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
-                <h3 class="text-dark">Proof of Gallery</h3>
-                <p class="font-weight-light mb-0">Prime KLC students who have gone KOREAN LANGUAGE TRAINING have passed the EPS-TOPIK exam and got hired by Korean employers. PRIME KLC is assisting Filipinos who are interested to work as factory workers in SOUTH KOREA.</p>
+                <h3 class="text-dark">Proof of Success</h3>
+                <p class="font-weight-light mb-0">At Prime KLC, we are honored to share the inspiring success stories of our students who have undergone our Korean language training programs. Their achievements serve as powerful proof of the effectiveness of our programs and our unwavering commitment to assisting Filipinos in their journey to work as factory workers in South Korea. Many of our students have not only passed the rigorous EPS-TOPIK exam but have also secured employment with highly regarded Korean employers, solidifying their success and opening doors to a brighter future.</p>
             </div>
         </div>
     </div>
@@ -22,7 +22,7 @@ id="testimonies">
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Orientation</h3>
-                <p class="font-weight-light mb-0">Orientation is conducted as the first step, for those interested applicants they must undergo an orientation to know the step by step process. Schedule of orientation is conducted regularly at least 2 times a week in different branches. Clients who are interested with this program must send the personal details Before attending the orientation to know the nearest branch where they can join the said</p>
+                <p class="font-weight-light mb-0">To ensure our clients are well-prepared and equipped with essential knowledge, Prime Korean Language and Review Center Incorporated conducts comprehensive orientations. During these orientations, we emphasize the pivotal role of the Korean language as a key requirement for employment in South Korea. It is important to note that Prime KLC is not a recruitment agency but a dedicated provider of Korean language tutorial services. Our goal is to guide and support our clients on their language learning journey, enabling them to successfully pass the EPS-TOPIK exam. We also inform our clients that only the Department of Migrant Workers (DMW) has the authority to facilitate their departure to South Korea. Through our orientations, we provide step-by-step guidance on the application process for working in South Korea, empowering our clients with the necessary information to navigate the journey ahead.</p>
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@ id="testimonies">
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Actual Class</h3>
-                <p class="font-weight-light mb-0">We offer actual classes of KOREAN LANGUAGE Training Schedule of classes for weekdays 17 days Monday to Friday at least 3 hours a day with 3 sessions Morning (9:00am to 12:00nn) Afternoon class ( 1:00pm to 4:00pm) Night class ( 6:00pm to 9:00pm) Sunday class 10 consecutive Sundays ( 9:00am to 4:00pm)</p>
+                <p class="font-weight-light mb-0">At Prime KLC, our actual classes are meticulously designed to provide our students with ample time and comprehensive training to master the Korean language. Our curriculum encompasses 10 days of basic Korean language training, followed by 7 days of intermediate training and 7 days of advanced training. Additionally, we offer a dedicated 1-month review period leading up to the e-EPS-TOPIK exam. What sets us apart is that even after the completion of regular classes and reviews, we provide our students with lifetime unlimited sit-ins, allowing them to continue refining their language skills until they successfully pass the EPS-TOPIK exam and secure employment in South Korea. This unparalleled level of support is our unwavering commitment to our students' success, ensuring their journey is filled with opportunities for growth without any additional charges.</p>
             </div>
         </div>
     </div>
@@ -46,7 +46,7 @@ id="testimonies">
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Graduation</h3>
-                <p class="font-weight-light mb-0">Giving of Certificates to all the students who have successfully completed the KOREAN LANGUAGE TRAINING/KOREAN CLASS. Acknowledging those students who are dedicated on their training, Giving of awards/recognition to those TOP SCORERS
+                <p class="font-weight-light mb-0">We take immense pride in celebrating the achievements of our students upon successful completion of their Korean language training. As a symbol of their dedication and hard work, we award certificates to all our students. Furthermore, we recognize and honor the exceptional performance of our top scorers by presenting them with awards and recognition, highlighting their outstanding accomplishments.
                 </p>
             </div>
         </div>
@@ -59,7 +59,8 @@ id="testimonies">
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Skill Test</h3>
-                <p class="font-weight-light mb-0">PRIME KLC is conducted an actual skill test training before attending the SKILL TEST under HRD KOREA It is conducted after passing the EPS-TOPIK EXAM, In preparation of the SKILL TEST in Manila Students will undergo an actual training, There is an actual interview with the TEACHER/INSTRUCTOR and the STUDENT and practicing different task in just 1 second.</p>
+                <p class="font-weight-light mb-0">To further prepare our students for success, Prime KLC conducts specialized skill test training in collaboration with HRD Korea. This training, which takes place after passing the EPS-TOPIK exam, focuses on honing practical skills. Through simulated interviews with teachers/instructors and intensive practice sessions, our students develop the necessary expertise and confidence to excel in the skill test. This comprehensive preparation ensures they are well-equipped to face any challenge that comes their way.
+                </p>
             </div>
         </div>
     </div>
@@ -71,7 +72,8 @@ id="testimonies">
         <div class="col-lg-6 pb-3 pt-3">
             <div class="pb-3 pt-3">
                 <h3 class="text-dark">Departure in South Korea</h3>
-                <p class="font-weight-light mb-0">After Passing the step by step process, PRIME KLC assisted the students financially until they reach SOUTH KOREA, We provide a free MALITA with financial assistance up to 50,000.                </p>
+                <p class="font-weight-light mb-0">Understanding that financial constraints may hinder some students, Prime KLC provides valuable financial assistance to support them until they reach South Korea. We offer a comprehensive financial support package ranging from 50,000 to 70,000 pesos. This assistance can be used to cover various expenses, including requirements, processing fees, airline tickets, and a much-needed allowance during their stay in South Korea. Our aim is to alleviate the financial burden and provide a smooth transition for our students, empowering them to embark on their journey with confidence and peace of mind.
+                </p>
             </div>
         </div>
     </div>
