feat: 4768f764d18b4a8485f10baa61df78a7

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -39,10 +39,19 @@
                                             <option value="other_expenses">Other Expenses</option>
                                             <option value="BIR">BIR</option>
                                             <option value="Business Permit">Business Permit</option>
-                                            <option value="Employee Benefits">Employee Benefits</option>
-                                            <option value="Bookeeper Retainer Fee">Bookeeper's Retainers Fee</option>
+                                            <option value="Bookeeper">Bookeeper</option>
                                             <option value="SNPL Fee">SNPL Fee</option>
                                             <option value="Transportation">Transportation</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-12" style="display:none;">
+                                    <div class="position-relative form-group">
+                                        <label for="government_benefits" class="">Description</label>
+                                        <select name="government_benefits" id="government_benefits" class="form-control" required>
+                                            <option value="">Choose category first...</option>
                                         </select>
                                     </div>
                                 </div>
