--- a/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/employee_benefits.html
+++ b/prime_admin/templates/lms/fund_wallet/components/business_expenses/components/employee_benefits.html
@@ -1,6 +1,6 @@
 <div class="tab-pane" id="tab-eg6-9" role="tabpanel">
     <div style="margin-top: 10px;" class="table-responsive">
-        <table id="tbl_salary"
+        <table id="tbl_employee_benefits"
             class="align-middle mb-0 table table-bordered table-striped table-hover">
             <thead>
                 <tr>
