--- a/prime_admin/templates/lms/payroll/payroll_page.html
+++ b/prime_admin/templates/lms/payroll/payroll_page.html
@@ -308,42 +308,17 @@
                     </div>
                 </div>
             </div>
+            <div class="page-title-actions">
+                <button type="button" data-toggle="tooltip" title="" data-placement="bottom" class="btn-shadow mr-3 btn btn-primary" data-original-title="Print">
+                    <i class="fa fa-plus"> New</i> 
+                </button>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-md-12">
             <div class="main-card mb-3 card">
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table id="tbl_employees"
-                            class="align-middle mb-0 table table-bordered table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th colspan="6" scope="colgroup"></th>
-                                    <th colspan="3" scope="colgroup">EE</th>
-                                    <th colspan="3" scope="colgroup">ER</th>
-                                    <th></th>
-                                  </tr>
-                                <tr>
-                                    <th class="text-center">SYSTEM ID</th>
-                                    <th class="text-center">EMPLOYEE ID</th>
-                                    <th>NAME</th>
-                                    <th class="text-center">POSITION</th>
-                                    <th class="text-center">BRANCH/S</th>
-                                    <th class="text-center">SALARY RATE</th>
-                                    <th class="text-center">SSS</th>
-                                    <th class="text-center">PHIL</th>
-                                    <th class="text-center">PAG-IBIG</th>
-                                    <th class="text-center">SSS</th>
-                                    <th class="text-center">PHIL</th>
-                                    <th class="text-center">PAG-IBIG</th>
-                                    <th class="text-center">ACTIONS</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
                 </div>
             </div>
         </div>
