--- a/prime_admin/templates/lms/payroll/payroll_page.html
+++ b/prime_admin/templates/lms/payroll/payroll_page.html
@@ -309,9 +309,9 @@
                 </div>
             </div>
             <div class="page-title-actions">
-                <button type="button" data-toggle="tooltip" title="" data-placement="bottom" class="btn-shadow mr-3 btn btn-primary" data-original-title="Print">
-                    <i class="fa fa-plus"> New</i> 
-                </button>
+                <a href="{{url_for('lms.create_payslip_page')}}" class="btn-shadow mr-3 btn btn-primary">
+                    <i class="fa fa-plus"> New Payslip</i> 
+                </a>
             </div>
         </div>
     </div>
@@ -319,6 +319,24 @@
         <div class="col-md-12">
             <div class="main-card mb-3 card">
                 <div class="card-body">
+                    <div style="margin-top: 10px;" class="table-responsive">
+                        <table id="tbl_salary"
+                            class="align-middle mb-0 table table-bordered table-striped table-hover">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">DATE</th>
+                                    <th class="text-center">NAME OF EMPLOYEE</th>
+                                    <th class="text-center">CUT OF DATE</th>
+                                    <th class="text-center">GROSS SALARY</th>
+                                    <th class="text-center">DEDUCTION</th>
+                                    <th class="text-center">NET</th>
+                                    <th class="text-center">SETTLED BY</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
